docs/api/qiskit/2.2/transpiler_preset.mdx
---
title: preset_passmanagers (v2.2)
description: API reference for qiskit.transpiler.preset_passmanagers in qiskit v2.2
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit.transpiler.preset_passmanagers
---

<span id="module-qiskit.transpiler.preset_passmanagers" />

<span id="qiskit-transpiler-preset-passmanagers" />

<span id="preset-passmanagers-qiskit-transpiler-preset-passmanagers" />

# Preset Passmanagers

`qiskit.transpiler.preset_passmanagers`

This module contains functions for generating the preset pass managers for the transpiler. The preset pass managers are instances of [`StagedPassManager`](qiskit.transpiler.StagedPassManager "qiskit.transpiler.StagedPassManager") which are used to execute the circuit transformations as part of Qiskit’s compiler inside the [`transpile()`](compiler#qiskit.compiler.transpile "qiskit.compiler.transpile") function at the different optimization levels, but can also be used in a standalone manner. The functionality here is divided into two parts. The first includes the functions used to generate the entire pass manager, which is used by [`transpile()`](compiler#qiskit.compiler.transpile "qiskit.compiler.transpile") ([Low-level preset pass manager generation](#preset-pass-manager-generators)), and the second includes functions that are used to build (either entirely or in part) the stages that comprise the preset pass managers ([Stage generator functions](#stage-generators)).

<span id="preset-pass-manager-generators" />

## Low-level preset pass manager generation

### level\_0\_pass\_manager

<Function id="qiskit.transpiler.preset_passmanagers.level_0_pass_manager" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/transpiler/preset_passmanagers/level0.py#L26-L104" signature="qiskit.transpiler.preset_passmanagers.level_0_pass_manager(pass_manager_config)">
  Level 0 pass manager: no explicit optimization other than mapping to backend.

  This pass manager applies the user-given initial layout. If none is given, a trivial layout consisting of mapping the i-th virtual qubit to the i-th physical qubit is used. Any unused physical qubit is allocated as ancilla space.

  The pass manager then unrolls the circuit to the desired basis, and transforms the circuit to match the coupling map.

  **Parameters**

  **pass\_manager\_config** ([*PassManagerConfig*](qiskit.transpiler.PassManagerConfig "qiskit.transpiler.passmanager_config.PassManagerConfig")) – configuration of the pass manager.

  **Returns**

  a level 0 pass manager.

  **Raises**

  [**TranspilerError**](transpiler#qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if the passmanager config is invalid.

  **Return type**

  [*StagedPassManager*](qiskit.transpiler.StagedPassManager "qiskit.transpiler.passmanager.StagedPassManager")
</Function>

### level\_1\_pass\_manager

<Function id="qiskit.transpiler.preset_passmanagers.level_1_pass_manager" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/transpiler/preset_passmanagers/level1.py#L26-L108" signature="qiskit.transpiler.preset_passmanagers.level_1_pass_manager(pass_manager_config)">
  Level 1 pass manager: light optimization by simple adjacent gate collapsing.

  This pass manager applies the user-given initial layout. If none is given, and a trivial layout (i-th virtual -> i-th physical) makes the circuit fit the coupling map, that is used. Otherwise, the circuit is mapped to the most densely connected coupling subgraph, and swaps are inserted to map. Any unused physical qubit is allocated as ancilla space. The pass manager then unrolls the circuit to the desired basis, and transforms the circuit to match the coupling map. Finally, optimizations in the form of adjacent gate collapse and redundant reset removal are performed.

  **Parameters**

  **pass\_manager\_config** ([*PassManagerConfig*](qiskit.transpiler.PassManagerConfig "qiskit.transpiler.passmanager_config.PassManagerConfig")) – configuration of the pass manager.

  **Returns**

  a level 1 pass manager.

  **Raises**

  [**TranspilerError**](transpiler#qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if the passmanager config is invalid.

  **Return type**

  [*StagedPassManager*](qiskit.transpiler.StagedPassManager "qiskit.transpiler.passmanager.StagedPassManager")
</Function>

### level\_2\_pass\_manager

<Function id="qiskit.transpiler.preset_passmanagers.level_2_pass_manager" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/transpiler/preset_passmanagers/level2.py#L27-L109" signature="qiskit.transpiler.preset_passmanagers.level_2_pass_manager(pass_manager_config)">
  Level 2 pass manager: medium optimization by initial layout selection and gate cancellation using commutativity rules.

  This pass manager applies the user-given initial layout. If none is given, a search for a perfect layout (i.e. one that satisfies all 2-qubit interactions) is conducted. If no such layout is found, qubits are laid out on the most densely connected subset which also exhibits the best gate fidelities.

  The pass manager then transforms the circuit to match the coupling constraints. It is then unrolled to the basis, and any flipped cx directions are fixed. Finally, optimizations in the form of commutative gate cancellation and redundant reset removal are performed.

  **Parameters**

  **pass\_manager\_config** ([*PassManagerConfig*](qiskit.transpiler.PassManagerConfig "qiskit.transpiler.passmanager_config.PassManagerConfig")) – configuration of the pass manager.

  **Returns**

  a level 2 pass manager.

  **Raises**

  [**TranspilerError**](transpiler#qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if the passmanager config is invalid.

  **Return type**

  [*StagedPassManager*](qiskit.transpiler.StagedPassManager "qiskit.transpiler.passmanager.StagedPassManager")
</Function>

### level\_3\_pass\_manager

<Function id="qiskit.transpiler.preset_passmanagers.level_3_pass_manager" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/transpiler/preset_passmanagers/level3.py#L27-L110" signature="qiskit.transpiler.preset_passmanagers.level_3_pass_manager(pass_manager_config)">
  Level 3 pass manager: heavy optimization by noise adaptive qubit mapping and gate cancellation using commutativity rules and unitary synthesis.

  This pass manager applies the user-given initial layout. If none is given, a search for a perfect layout (i.e. one that satisfies all 2-qubit interactions) is conducted. If no such layout is found, and device calibration information is available, the circuit is mapped to the qubits with best readouts and to CX gates with highest fidelity.

  The pass manager then transforms the circuit to match the coupling constraints. It is then unrolled to the basis, and any flipped cx directions are fixed. Finally, optimizations in the form of commutative gate cancellation, resynthesis of two-qubit unitary blocks, redundant reset removal and final layout improvements are performed.

  **Parameters**

  **pass\_manager\_config** ([*PassManagerConfig*](qiskit.transpiler.PassManagerConfig "qiskit.transpiler.passmanager_config.PassManagerConfig")) – configuration of the pass manager.

  **Returns**

  a level 3 pass manager.

  **Raises**

  [**TranspilerError**](transpiler#qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if the passmanager config is invalid.

  **Return type**

  [*StagedPassManager*](qiskit.transpiler.StagedPassManager "qiskit.transpiler.passmanager.StagedPassManager")
</Function>

<span id="stage-generators" />

## Stage generator functions

### generate\_control\_flow\_options\_check

<Function id="qiskit.transpiler.preset_passmanagers.generate_control_flow_options_check" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/transpiler/preset_passmanagers/common.py#L115-L161" signature="qiskit.transpiler.preset_passmanagers.generate_control_flow_options_check(layout_method=None, routing_method=None, translation_method=None, optimization_method=None, scheduling_method=None, basis_gates=(), target=None)">
  Generate a pass manager that, when run on a DAG that contains control flow, fails with an error message explaining the invalid options, and what could be used instead.

  **Returns**

  a pass manager that populates the `contains_x` properties for each of the control-flow operations, and raises an error if any of the given options do not support control flow, but a circuit with control flow is given.

  **Return type**

  [PassManager](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager")
</Function>

### generate\_error\_on\_control\_flow

<Function id="qiskit.transpiler.preset_passmanagers.generate_error_on_control_flow" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/transpiler/preset_passmanagers/common.py#L164-L170" signature="qiskit.transpiler.preset_passmanagers.generate_error_on_control_flow(message)">
  Get a pass manager that always raises an error if control flow is present in a given circuit.
</Function>

### generate\_unroll\_3q

<Function id="qiskit.transpiler.preset_passmanagers.generate_unroll_3q" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/transpiler/preset_passmanagers/common.py#L187-L251" signature="qiskit.transpiler.preset_passmanagers.generate_unroll_3q(target, basis_gates=None, approximation_degree=None, unitary_synthesis_method='default', unitary_synthesis_plugin_config=None, hls_config=None, qubits_initially_zero=True, optimization_metric=OptimizationMetric.COUNT_2Q)">
  Generate an unroll >3q [`PassManager`](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager")

  **Parameters**

  *   **target** ([*Target*](qiskit.transpiler.Target "qiskit.transpiler.Target")) – the [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") object representing the backend
  *   **basis\_gates** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.14)")) – A list of str gate names that represent the basis gates on the backend target
  *   **approximation\_degree** (*Optional\[*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.14)")*]*) – The heuristic approximation degree to use. Can be between 0 and 1.
  *   **unitary\_synthesis\_method** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.14)")) – The unitary synthesis method to use. You can see a list of installed plugins with [`unitary_synthesis_plugin_names()`](qiskit.transpiler.passes.synthesis.plugin.unitary_synthesis_plugin_names "qiskit.transpiler.passes.synthesis.plugin.unitary_synthesis_plugin_names").
  *   **unitary\_synthesis\_plugin\_config** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.14)")) – The optional dictionary plugin configuration, this is plugin specific refer to the specified plugin’s documentation for how to use.
  *   **hls\_config** ([*HLSConfig*](qiskit.transpiler.passes.HLSConfig "qiskit.transpiler.passes.HLSConfig")) – An optional configuration class to use for [`HighLevelSynthesis`](qiskit.transpiler.passes.HighLevelSynthesis "qiskit.transpiler.passes.HighLevelSynthesis") pass. Specifies how to synthesize various high-level objects.
  *   **qubits\_initially\_zero** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.14)")) – Indicates whether the input circuit is zero-initialized.
  *   **optimization\_metric** ([*OptimizationMetric*](qiskit.transpiler.OptimizationMetric "qiskit.transpiler.OptimizationMetric")) – the [`OptimizationMetric`](qiskit.transpiler.OptimizationMetric "qiskit.transpiler.OptimizationMetric") object that the metric used when optimizing the unrolling.

  **Returns**

  The unroll 3q or more pass manager

  **Return type**

  [PassManager](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager")
</Function>

### generate\_embed\_passmanager

<Function id="qiskit.transpiler.preset_passmanagers.generate_embed_passmanager" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/transpiler/preset_passmanagers/common.py#L254-L267" signature="qiskit.transpiler.preset_passmanagers.generate_embed_passmanager(coupling_map)">
  Generate a layout embedding [`PassManager`](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager")

  This is used to generate a [`PassManager`](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager") object that can be used to expand and apply an initial layout to a circuit

  **Parameters**

  **coupling\_map** (*Union\[*[*CouplingMap*](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")*,* [*Target*](qiskit.transpiler.Target "qiskit.transpiler.Target")) – The coupling map for the backend to embed the circuit to.

  **Returns**

  **The embedding passmanager that assumes the layout property**

  set has been set in earlier stages

  **Return type**

  [PassManager](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager")
</Function>

### generate\_routing\_passmanager

<Function id="qiskit.transpiler.preset_passmanagers.generate_routing_passmanager" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/transpiler/preset_passmanagers/common.py#L285-L381" signature="qiskit.transpiler.preset_passmanagers.generate_routing_passmanager(routing_pass, target, coupling_map=None, vf2_call_limit=None, seed_transpiler=-1, check_trivial=False, use_barrier_before_measurement=True, vf2_max_trials=None)">
  Generate a routing [`PassManager`](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager")

  **Parameters**

  *   **routing\_pass** ([*TransformationPass*](qiskit.transpiler.TransformationPass "qiskit.transpiler.TransformationPass")) – The pass which will perform the routing
  *   **target** ([*Target*](qiskit.transpiler.Target "qiskit.transpiler.Target")) – the [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") object representing the backend
  *   **coupling\_map** ([*CouplingMap*](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")) – The coupling map of the backend to route for
  *   **vf2\_call\_limit** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.14)")) – The internal call limit for the vf2 post layout pass. If this is `None` or `0` the vf2 post layout will not be run.
  *   **seed\_transpiler** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.14)")) – Sets random seed for the stochastic parts of the transpiler. This is currently only used for [`VF2PostLayout`](qiskit.transpiler.passes.VF2PostLayout "qiskit.transpiler.passes.VF2PostLayout") and the default value of `-1` is strongly recommended (which is no randomization). If a value of `None` is provided this will seed from system entropy.
  *   **check\_trivial** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.14)")) – If set to true this will condition running the [`VF2PostLayout`](qiskit.transpiler.passes.VF2PostLayout "qiskit.transpiler.passes.VF2PostLayout") pass after routing on whether a trivial layout was tried and was found to not be perfect. This is only needed if the constructed pass manager runs [`TrivialLayout`](qiskit.transpiler.passes.TrivialLayout "qiskit.transpiler.passes.TrivialLayout") as a first layout attempt and uses it if it’s a perfect layout (as is the case with preset pass manager level 1).
  *   **use\_barrier\_before\_measurement** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.14)")) – If true (the default) the [`BarrierBeforeFinalMeasurements`](qiskit.transpiler.passes.BarrierBeforeFinalMeasurements "qiskit.transpiler.passes.BarrierBeforeFinalMeasurements") transpiler pass will be run prior to the specified pass in the `routing_pass` argument.
  *   **vf2\_max\_trials** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.14)")) – The maximum number of trials to run VF2 when evaluating the vf2 post layout pass. If this is `None` or `0` the vf2 post layout will not be run.

  **Returns**

  The routing pass manager

  **Return type**

  [PassManager](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager")
</Function>

### generate\_pre\_op\_passmanager

<Function id="qiskit.transpiler.preset_passmanagers.generate_pre_op_passmanager" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/transpiler/preset_passmanagers/common.py#L384-L422" signature="qiskit.transpiler.preset_passmanagers.generate_pre_op_passmanager(target=None, coupling_map=None, remove_reset_in_zero=False)">
  Generate a pre-optimization loop [`PassManager`](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager")

  This pass manager will check to ensure that directionality from the coupling map is respected.

  <Admonition title="Deprecated since version 2.0" type="danger">
    The function `qiskit.transpiler.preset_passmanagers.common.generate_pre_op_passmanager()` is deprecated as of Qiskit 2.0. It will be removed in Qiskit 3.0. Translation plugins are now required to respect ISA directionality, so typically no replacement is necessary.
  </Admonition>

  **Parameters**

  *   **target** ([*Target*](qiskit.transpiler.Target "qiskit.transpiler.Target")) – the [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") object representing the backend
  *   **coupling\_map** ([*CouplingMap*](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")) – The coupling map to use
  *   **remove\_reset\_in\_zero** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.14)")) – If `True` include the remove reset in zero pass in the generated PassManager

  **Returns**

  The pass manager

  **Return type**

  [PassManager](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager")
</Function>

### generate\_translation\_passmanager

<Function id="qiskit.transpiler.preset_passmanagers.generate_translation_passmanager" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/transpiler/preset_passmanagers/common.py#L425-L644" signature="qiskit.transpiler.preset_passmanagers.generate_translation_passmanager(target, basis_gates=None, method='translator', approximation_degree=None, coupling_map=None, unitary_synthesis_method='default', unitary_synthesis_plugin_config=None, hls_config=None, qubits_initially_zero=True)">
  Generate a basis translation [`PassManager`](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager")

  **Parameters**

  *   **target** ([*Target*](qiskit.transpiler.Target "qiskit.transpiler.Target")) – the [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") object representing the backend
  *   **basis\_gates** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.14)")) – A list of str gate names that represent the basis gates on the backend target
  *   **method** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.14)")) – The basis translation method to use
  *   **approximation\_degree** (*Optional\[*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.14)")*]*) – The heuristic approximation degree to use. Can be between 0 and 1.
  *   **coupling\_map** ([*CouplingMap*](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")) – the coupling map of the backend in case synthesis is done on a physical circuit. The directionality of the coupling\_map will be taken into account if pulse\_optimize is True/None and natural\_direction is True/None.
  *   **unitary\_synthesis\_plugin\_config** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.14)")) – The optional dictionary plugin configuration, this is plugin specific refer to the specified plugin’s documentation for how to use.
  *   **unitary\_synthesis\_method** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.14)")) – The unitary synthesis method to use. You can see a list of installed plugins with [`unitary_synthesis_plugin_names()`](qiskit.transpiler.passes.synthesis.plugin.unitary_synthesis_plugin_names "qiskit.transpiler.passes.synthesis.plugin.unitary_synthesis_plugin_names").
  *   **hls\_config** ([*HLSConfig*](qiskit.transpiler.passes.HLSConfig "qiskit.transpiler.passes.HLSConfig")) – An optional configuration class to use for [`HighLevelSynthesis`](qiskit.transpiler.passes.HighLevelSynthesis "qiskit.transpiler.passes.HighLevelSynthesis") pass. Specifies how to synthesize various high-level objects.
  *   **qubits\_initially\_zero** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.14)")) – Indicates whether the input circuit is zero-initialized.

  **Returns**

  The basis translation pass manager

  **Return type**

  [PassManager](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager")

  **Raises**

  [**TranspilerError**](transpiler#qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – If the `method` kwarg is not a valid value
</Function>

### generate\_scheduling

<Function id="qiskit.transpiler.preset_passmanagers.generate_scheduling" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/transpiler/preset_passmanagers/common.py#L647-L721" signature="qiskit.transpiler.preset_passmanagers.generate_scheduling(instruction_durations, scheduling_method, timing_constraints, target=None)">
  Generate a post optimization scheduling [`PassManager`](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager")

  **Parameters**

  *   **instruction\_durations** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.14)")) – The dictionary of instruction durations
  *   **scheduling\_method** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.14)")) – The scheduling method to use, can either be `'asap'`/`'as_soon_as_possible'` or `'alap'`/`'as_late_as_possible'`
  *   **timing\_constraints** (*TimingConstraints*) – Hardware time alignment restrictions.
  *   **target** ([*Target*](qiskit.transpiler.Target "qiskit.transpiler.Target")) – The [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") object representing the backend

  **Returns**

  The scheduling pass manager

  **Return type**

  [PassManager](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager")

  **Raises**

  [**TranspilerError**](transpiler#qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – If the `scheduling_method` kwarg is not a valid value
</Function>

